# rpg2gba

./: .claudeignore  .env  .env-paths  .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  FABLES_DECISIONS.md  FABLES_IMPLEMENTATION.md  FABLES_OBSERVATION.md  ITERATIVE_ROADMAP.md  MEMORY.md  OQ3_EMPIRICAL_PLAN.md  PATHFINDER_BUILD.md  PATHFINDER_FINDINGS.md  PATHFINDER_SLICE_ROADMAP.md  PATHFINDER_STEP2_TILE_MAP_PLAN.md  PATHFINDER_STEP3_LAYOUT_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_CALIBRATION_PLAN.md  PHASE4_DEDUP_PLAN.md  PHASE4_DETERMINISTIC_PLAN.md  PHASE4_PLAN.md  PHASE5_PLAN.md  README.md  ROADMAP.md  pyproject.toml  uranium-pipeline-roadmap.md
ai-converter/: AGENTS.md  How_to_use_agents.md  MEMORY.md
engine/: RPG2GBA_VENDOR.md  map_data_rules.mk
reference/: ability_descriptions.json  ability_internal_names.json  ability_names.json  agent_coverage_diff.md  animation_names.json  asset_inventory.md  command_pokeemerald_map.md  conversion_walkthrough.md  critique_2026-07-01.md  engine_extension_surface.md  essentials_to_emerald_map.md  flag_registry_policy.md  graphics_conversion_notes.md  grill_spine_2026-07-02.md  how_to_use_agents.md  human_quickref.md  item_descriptions.json  item_dupe_census_2026-07-04.md  item_internal_names.json  item_names.json  map_inspector_spec.md  map_inventory.md  map_name_overrides.json  map_names.json  map_viewer.md  map_viewer_palette_plan.md  map_viewer_perf_and_fidelity.md  map_walker_plan.md  maps_and_common_events.md  memory-archive.md  memory-protocol.md  move_descriptions.json  move_internal_names.json  (+46 more)
(+271 files in other folders)
