[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg2gba"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "anthropic>=0.25",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[project.scripts]
rpg2gba = "rpg2gba.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
