[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg2gba"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pillow>=10.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[project.scripts]
rpg2gba = "rpg2gba.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "phase2: converter tests that read the real Uranium .dat files (need RPG2GBA_URANIUM_SRC)",
    "phase3: map-deserializer tests that read the real Uranium .rxdata files (need RPG2GBA_URANIUM_SRC)",
    "phase4: conversion-agent tests that need the real poryscript binary (skip if absent)",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
